--- a/src/pages/elements.html
+++ b/src/pages/elements.html
@@ -2,33 +2,21 @@
 title: Elements
 ---
 <style>section {border-bottom: 1px solid lightgray; padding-bottom: 40px;}</style>
-<!-- HTML5 Kitchen sink by @dbox -->
+<!-- HTML5 Kitchen based on a previous effort by @dbox -->
 <main class="flow">
-  <section>
-    <hgroup class="flow">
-      <h1>h1 HTML5 Kitchen Sink</h1>
-      <h2>h2 Back in my quaint <a href='#'>garden</a></h2>
-      <h3>h3 Jaunty <a href='#'>zinnias</a> vie with flaunting phlox</h3>
-      <h4>h4 Five or six big jet planes zoomed quickly by the new tower.</h4>
-      <h5>h5 Expect skilled signwriters to use many jazzy, quaint old alphabets effectively.</h5>
-      <h6>h6 Pack my box with five dozen liquor jugs.</h6>
-    </hgroup>
+  <section class="flow">
+    <h1>h1 HTML5 Kitchen Sink</h1>
+    <h2>h2 Back in my quaint <a href='#'>garden</a></h2>
+    <h3>h3 Jaunty <a href='#'>zinnias</a> vie with flaunting phlox</h3>
+    <h4>h4 Five or six big jet planes zoomed quickly by the new tower.</h4>
+    <h5>h5 Expect skilled signwriters to use many jazzy, quaint old alphabets effectively.</h5>
+    <h6>h6 Pack my box with five dozen liquor jugs.</h6>
   </section>
 
   <section class="flow">
-    <header>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
     <article>
-      <p>This paragraph is nested inside an article. It contains many different, sometimes useful, <a href="https://www.w3schools.com/tags/">HTML5 tags</a>. Of course there are classics like <em>emphasis</em>, <strong>strong</strong>, and <small>small</small>        but there are many others as well. Hover the following text for abbreviation tag: <abbr title="abbreviation">abbr</abbr>. Similarly, you can use acronym tag like this: <acronym title="For The Win">ftw</acronym>. You can define <del>deleted text</del>        which often gets replaced with <ins>inserted</ins> text.</p>
-      <p>You can also use <kbd>keyboard text</kbd>, which sometimes is styled similarly to the <code>&lt;code&gt;</code> or <samp>samp</samp> tags. Even more specifically, there is a tag just for <var>variables</var>. Not to be mistaken with blockquotes
-        below, the quote tag lets you denote something as <q>quoted text</q>. Lastly don't forget the sub (H<sub>2</sub>O) and sup (E = MC<sup>2</sup>) tags. </p>
+      <p>This paragraph is nested inside an article. It contains many different, sometimes useful, <a href="https://www.w3schools.com/tags/">HTML5 tags</a>. Of course there are classics like <em>emphasis</em>, <strong>strong</strong>, and <small>small</small> but there are many others as well. Hover the following text for abbreviation tag: <abbr title="abbreviation">abbr</abbr>. Similarly, you can use acronym tag like this: <acronym title="For The Win">ftw</acronym>.</p>
+      <p>You can also use <code>&lt;code&gt;</code> tags. Not to be mistaken with blockquotes below, the quote tag lets you denote something as <q>quoted text</q>. Lastly don't forget the sub (H<sub>2</sub>O) and sup (E = MC<sup>2</sup>) tags.</p>
     </article>
     <aside>This is an aside.</aside>
     <footer>This is footer for this section</footer>
@@ -78,19 +66,6 @@ title: Elements
     </table>
   </section>
 
-  <section>
-    <dl>
-      <dt>Definition List Title</dt>
-      <dd>Definition list division.</dd>
-      <dt>Kitchen Sink</dt>
-      <dd>Used in expressions to describe work in which all conceivable (and some inconceivable) sources have been mined. In this case, a bunch of markup.</dd>
-      <dt>aside</dt>
-      <dd>Defines content aside from the page content</dd>
-      <dt>blockquote</dt>
-      <dd>Defines a section that is quoted from another source</dd>
-    </dl>
-  </section>
-
   <section class="flow">
     <ul>
       <li>Unordered List item one
@@ -136,12 +111,6 @@ title: Elements
   </section>
 
   <section>
-    <address>1 Infinite Loop<br>
-  Cupertino, CA 95014<br>
-  United States</address>
-  </section>
-
-  <section>
     <pre>
 pre {
   display: block;
@@ -154,13 +123,14 @@ pre {
   font-family: Menlo, Monaco;
   line-height: 160%;
 }</pre>
-
   </section>
 
-  <figure>
-    <img src="https://picsum.photos/id/58/400/300">
-    <figcaption>Fig1. A picture from <a href="https://picsum.photos/">Lorem Picsum</a></figcaption>
-  </figure>
+  <section>
+    <figure>
+      <img src="https://picsum.photos/id/58/400/300">
+      <figcaption>Fig1. A picture from <a href="https://picsum.photos/">Lorem Picsum</a></figcaption>
+    </figure>
+  </section>
 
 
   <section>
@@ -170,7 +140,7 @@ pre {
         <input type="email" id="example-input-email" placeholder="Enter email">
       </p>
       <p>
-        <label for="example-input-password1">Number</label>
+        <label for="example-input-number">Number</label>
         <input type="number" id="example-input-number" placeholder="Number">
       </p>
       <p>
@@ -179,7 +149,7 @@ pre {
       </p>
       <p>
         <label for="example-input-search">Search</label>
-        <input type="search" id="example-input-serach" placeholder="Search ..">
+        <input type="search" id="example-input-search" placeholder="Search">
       </p>
       <p>
         <label for="example-input-tel">Telephone number</label>
@@ -190,55 +160,27 @@ pre {
         <input type="text" id="example-input-text" placeholder="Enter some text here">
       </p>
       <p>
-        <label for="example-input-url">Url</label>
-        <input type="url" id="example-input-url" placeholder="Enter a url here">
-      </p>
-      <p>
-        <label for="example-input-color">Color</label>
-        <input type="color" id="example-inupt-color" placeholder="#fff">
-      </p>
-      <p>
         <label for="example-input-date">Date</label>
         <input type="date" id="example-input-date" placeholder="date">
       </p>
       <p>
-        <label for="example-input-date-time">Date / Time</label>
-        <input type="datetime" id="example-input-date-time" placeholder="date / time">
-      </p>
-      <p>
-        <label for="example-input-date-time-local">Date / Time local</label>
-        <input type="datetime-local" id="example-input-date-time-local" placeholder="date / time local">
-      </p>
-      <p>
-        <label for="example-input-month">Month</label>
-        <input type="month" id="example-input-month" placeholder="Month">
-      </p>
-      <p>
-        <label for="example-input-week">Week</label>
-        <input type="week" id="example-input-week" placeholder="Week">
-      </p>
-      <p>
-        <label for="example-input-time">Time</label>
-        <input type="time" id="example-input-time" placeholder="Time">
-      </p>
-      <p>
         <label for="example-select1">Example select</label>
         <select id="example-select1">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
+          <option>One</option>
+          <option>Two</option>
+          <option>Three</option>
+          <option>Four</option>
+          <option>Five</option>
         </select>
       </p>
       <p>
         <label for="example-select2">Example multiple select</label>
         <select multiple id="example-select2">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
+          <option>One</option>
+          <option>Two</option>
+          <option>Three</option>
+          <option>Four</option>
+          <option>Five</option>
         </select>
       </p>
       <p>
@@ -274,10 +216,10 @@ pre {
         <label><input type="checkbox">Or check me out</label>
       </fieldset>
 
-      <button type="button" name="button">Button</button>
-      <input type="button" name="input" value="Input Button">
-      <input type="submit" name="submit" value="Submit Button">
-      <input type="reset" name="reset" value="Reset Button">
+      <button type="button" name="button" class="c-btn">Button</button>
+      <input type="button" name="input" value="Input Button" class="c-btn">
+      <input type="submit" name="submit" value="Submit Button" class="c-btn">
+      <input type="reset" name="reset" value="Reset Button" class="c-btn">
     </form>
   </section>
 </main>
